--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -42,3 +42,16 @@ jobs:
 
     - name: run misspell
       run: make misspell
+
+  docfx:
+    runs-on: windows-latest
+    steps:
+    - name: check out code
+      uses: actions/checkout@v2
+
+    - name: install docfx
+      run: choco install docfx -y
+
+    - name: run .\docfx.cmd
+      shell: cmd
+      run: .\docfx.cmd
