rename github action job for sem conv
Signed-off-by: Andrew Hsu <xuzuan@gmail.com>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -56,7 +56,7 @@ jobs:
       shell: cmd
       run: .\docfx.cmd
 
-  test-markdown:
+  semantic-conventions:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
