add build badges to top of readme (#1276)

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -55,3 +55,10 @@ jobs:
     - name: run .\docfx.cmd
       shell: cmd
       run: .\docfx.cmd
+
+  semantic-conventions:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: verify semantic convention tables
+      run: docker run --rm -v $(pwd)/semantic_conventions:/source -v $(pwd)/specification:/spec otel/semconvgen -f /source markdown -md /spec --md-check
