--- a/semantic_conventions/resource/service.yaml
+++ b/semantic_conventions/resource/service.yaml
@@ -12,9 +12,9 @@ groups:
         note: >
           MUST be the same for all instances of horizontally scaled services.
           Although this is a required attribute, if the value was not specified, SDKs
-          MUST fallback to a language-specific name based on the running service
-          (typically inferred from process name, language, plaform, etc).
-          If this fallback fails, the name MUST default to `unknown_service`.
+          MUST fallback to `unknown_service:` concatenated with [`process.executable.name`](process.md#process),
+          e.g. `unknown_service:bash`. If `process.executable.name` is not available, the value
+          MUST be set to `unknown_service`.
         examples: ["shoppingcart"]
       - id: namespace
         type: string
