--- a/semantic_conventions/resource/cloud.yaml
+++ b/semantic_conventions/resource/cloud.yaml
@@ -89,5 +89,5 @@ groups:
         brief: >
           The cloud infrastructure resource in use.
         note: >
-          The prefix of the service SHOULD match a `cloud.provider`.
+          The prefix of the service SHOULD match the one specified in `cloud.provider`.
         examples: ['AWS_EC2', 'Azure_VM', 'GCP_ComputeEngine']
