lowercased infra service values

--- a/semantic_conventions/resource/cloud.yaml
+++ b/semantic_conventions/resource/cloud.yaml
@@ -42,52 +42,52 @@ groups:
           allow_custom_values: true
           members:
             - id: AWS_EC2
-              value: 'AWS_EC2'
+              value: 'aws_ec2'
               brief: AWS Elastic Compute Cloud
             - id: AWS_ECS
-              value: 'AWS_ECS'
+              value: 'aws_ecs'
               brief: AWS Elastic Container Service
             - id: AWS_EKS
-              value: 'AWS_EKS'
+              value: 'aws_eks'
               brief: AWS Elastic Kubernetes Service
             - id: AWS_Lambda
-              value: 'AWS_Lambda'
+              value: 'aws_lambda'
               brief: AWS Lambda
             - id: AWS_ElasticBeanstalk
-              value: 'AWS_ElasticBeanstalk'
+              value: 'aws_elastic_beanstalk'
               brief: AWS Elastic Beanstalk
             - id: Azure_VM
-              value: 'Azure_VM'
+              value: 'azure_vm'
               brief: Azure Virtual Machines
             - id: Azure_ContainerInstances
-              value: 'Azure_ContainerInstances'
+              value: 'azure_container_instances'
               brief: Azure Container Instances
             - id: Azure_AKS
-              value: 'Azure_AKS'
+              value: 'azure_aks'
               brief: Azure Kubernetes Service
             - id: Azure_Functions
-              value: 'Azure_Functions'
+              value: 'azure_functions'
               brief: Azure Functions
             - id: Azure_AppService
-              value: 'Azure_AppService'
+              value: 'azure_app_service'
               brief: Azure App Service
             - id: GCP_ComputeEngine
-              value: 'GCP_ComputeEngine'
+              value: 'gcp_compute_engine'
               brief: GCP Compute Engine
             - id: GCP_CloudRun
-              value: 'GCP_CloudRun'
+              value: 'gcp_cloud_run'
               brief: GCP Cloud Run
             - id: GCP_GKE
-              value: 'GCP_GKE'
+              value: 'gcp_gke'
               brief: Google Kubernetes Engine
             - id: GCP_CloudFunctions
-              value: 'GCP_CloudFunctions'
+              value: 'gcp_cloud_functions'
               brief: GCP Cloud Functions
             - id: GCP_AppEngine
-              value: 'GCP_AppEngine'
+              value: 'gcp_app_engine'
               brief: GCP App Engine
         brief: >
           The cloud infrastructure resource in use.
         note: >
           The prefix of the service SHOULD match the one specified in `cloud.provider`.
-        examples: ['AWS_EC2', 'Azure_VM', 'GCP_ComputeEngine']
+        examples: ['aws_ec2', 'azure_vm', 'gcp_compute_engine']
