--- a/semantic_conventions/resource/service.yaml
+++ b/semantic_conventions/resource/service.yaml
@@ -11,10 +11,9 @@ groups:
           Logical name of the service.
         note: >
           MUST be the same for all instances of horizontally scaled services.
-          Although this is a required attribute, if the value was not specified, SDKs
-          MUST fallback to `unknown_service:` concatenated with [`process.executable.name`](process.md#process),
-          e.g. `unknown_service:bash`. If `process.executable.name` is not available, the value
-          MUST be set to `unknown_service`.
+          If the value was not specified, SDKs MUST fallback to `unknown_service:` concatenated
+          with [`process.executable.name`](process.md#process), e.g. `unknown_service:bash`.
+          If `process.executable.name` is not available, the value MUST be set to `unknown_service`.
         examples: ["shoppingcart"]
       - id: namespace
         type: string
