--- a/semantic_conventions/resource/faas.yaml
+++ b/semantic_conventions/resource/faas.yaml
@@ -34,3 +34,15 @@ groups:
         brief: >
           The execution environment ID as a string.
         examples: ['my-function:instance-0001']
+      - id: max_memory
+        type: number
+        brief: >
+          The amount of memory available to the serverless function in MB.
+        note: >
+          On AWS Lambda, the environment variable `AWS_LAMBDA_FUNCTION_MEMORY_SIZE`
+          provides this information.
+        required:
+          conditional: >
+            Required for executions on serverless environments given that the
+            respective environment provides this information.
+        examples: 128
