--- a/semantic_conventions/resource/faas.yaml
+++ b/semantic_conventions/resource/faas.yaml
@@ -39,10 +39,8 @@ groups:
         brief: >
           The amount of memory available to the serverless function in MiB.
         note: >
+          It's recommended to set this attribute in since e.g. too little memory can easily
+          stop a Java AWS Lambda function from working correctly.
           On AWS Lambda, the environment variable `AWS_LAMBDA_FUNCTION_MEMORY_SIZE`
           provides this information.
-        required:
-          conditional: >
-            Required for executions on serverless environments given that the
-            respective environment provides this information.
         examples: 128
