Revert "Fix typo in cloud resource convention. (#1097)"
This reverts commit e4d934945f6683097d3bfd3400039010ce90a4b1.

--- a/semantic_conventions/resource/cloud.yaml
+++ b/semantic_conventions/resource/cloud.yaml
@@ -13,7 +13,7 @@ groups:
               brief: 'Amazon Web Services'
             - id: Azure
               value: 'azure'
-              brief: 'Microsoft Azure'
+              brief: 'Amazon Web Services'
             - id: GCP
               value: 'gcp'
               brief: 'Google Cloud Platform'
